# uwacomm

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml  release.yml
docs/: changelog.md  contributing.md  index.md
docs/api/: codec.md  core.md  framing.md  protobuf.md  utils.md
docs/examples/: basic_usage.md  framing.md  underwater_comms.md
docs/user_guide/: encoding.md  float_encoding.md  framing.md  getting_started.md  message_definition.md  multi_mode_encoding.md  protobuf.md
examples/: bandwidth_comparison.py  basic_usage.py  demo_multi_mode.py  fragmentation_demo.py  framing_example.py  generic_uw_messages.py  hitl_simulation.py  nested_messages.py  protobuf_schema.py  underwater_comms.py  using_generated_proto.py  varlen_fields.py
src/uwacomm/: __init__.py  exceptions.py  fragmentation.py  routing.py
src/uwacomm/cli/: __init__.py  analyze.py  main.py
src/uwacomm/codec/: __init__.py  bitpack.py  decoder.py  encoder.py  schema.py
src/uwacomm/framing/: __init__.py  basic.py
src/uwacomm/models/: __init__.py  base.py  fields.py
src/uwacomm/modem/: __init__.py  config.py  driver.py  mock.py
src/uwacomm/protobuf/: __init__.py  convert.py
src/uwacomm/utils/: __init__.py  crc.py  sizing.py
tests/: conftest.py
tests/benchmarks/: conftest.py  test_bench_codec.py  test_bench_float.py  test_bench_routing.py
tests/integration/: test_end_to_end.py
tests/unit/: test_bitpack.py  test_cli.py  test_codec.py  test_crc.py  test_float.py  test_fragmentation.py  test_framing.py  test_modem_mock.py  test_modes.py  test_nested.py  test_property_based.py  test_protobuf.py  test_varlen.py
